# pattern_detector

./: .gitignore  Cargo.toml  ZROK_SETUP.txt  backend_investigation.sh  cache_zones_debug.json  cache_zones_debug_dynamic.json  candlesResponse.json  clear_redis_keys.sh  combined_backtest_ui.html  currency_summary_report_20250325_173257.html  debug_cache_population_trace.txt  debug_matching.rs  debug_raw_cache_csv.txt  debug_ui_cache_read_trace.txt  delete_non_sb_zones.sh  detected_raw_zones.txt  docker-compose.yml  extracted_csv.txt  htf_analysis_report.html  influxQueries.txt  log4rs.yaml  log_redis_entries.sh  mapped_stored_zones.txt  optimization_report_20250324_181807.html  optimization_report_20250325_120243.html  optimization_report_20250325_122832.html  optimization_report_20250325_145053.html  optimization_report_20250325_171403.html  optimization_report_20250325_173002.html  optimization_report_20250325_173009.html  optimization_report_20250325_173015.html  optimization_report_20250325_173028.html  optimization_report_20250325_173034.html  optimization_report_20250325_173039.html  optimization_report_20250325_173049.html  optimization_report_20250325_173108.html  optimization_report_20250325_173111.html  optimization_report_20250325_173120.html  optimization_report_20250325_173124.html  optimization_report_20250325_173145.html  (+57 more)
debug/: trade_analysis_20250613_120058.csv  trade_analysis_20250613_120217.csv  trades-20250613_120058.csv  trades-20250613_120217.csv  zone_proximity_summary_20250613_120058.csv  zone_proximity_summary_20250613_120215.csv
docs/: combined-backtest-endpoint.md
logs/: check_filter_logs.sh  compare_logs.sh  compare_raw_json.sh  comparison_output.txt  filter_check_output.txt  generator_active_counts.txt
src/: admin_handlers.rs  backtest.rs  backtest_api.rs  cache_endpoints.rs  ctrader_integration.rs  detect.rs  get_zone_by_id.rs  handlers.rs  index.html  influx_fetcher.rs  latest_zones_handler.rs  lib.rs  main.rs  minimal_zone_cache.rs  multi_backtest_handler.rs  notification_manager.rs  optimize_handler.rs  optimized_weekly_report.html  optimizer.html  otherTradeExecution.rs  price_feed.rs  realtime_cache_updater.rs  realtime_monitor.rs  realtime_monitor_dashboard.html  realtime_zone_monitor.rs  sound_notifier.rs  stale_zone_checker.rs  telegram_notifier.rs  terminal_dashboard.rs  test-websocket.html  trade_decision_engine.rs  trade_event_logger.rs  trade_tracker.rs  trades.rs  trading.rs  types.rs  websocket_server.rs  zone_detection.rs  zone_generator.rs  zone_interactions.rs  (+5 more)
src_backup_20250605_200619/: backtest.rs  backtest_api.rs  detect.rs  errors.rs  get_zone_by_id.rs  influx_fetcher.rs  lib.rs  multi_backtest_handler.rs  optimize_handler.rs  proximity_detector.rs  simple_price_websocket.rs  sound_notifier.rs  telegram_notifier.rs  trade_decision_engine.rs  trade_event_logger.rs  trading.rs  types.rs  zone_detection.rs
(+158 files in other folders)
