[package]
name = "pattern_detector"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
csv = "1.1"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
log = "0.4"
chrono = "0.4"
influxdb = "0.7.0"  # Main InfluxDB client
futures = "0.3" 
influxdb2 = "0.5.2"
influxdb2-structmap = "0.2.0"