[package]
name = "pattern_detector"
version = "0.1.0"
edition = "2021"
default-run = "pattern_detector"  # Add this line

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
csv = "1.1"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
log4rs = "1.2.0"  
log = "0.4"
chrono = "0.4"
influxdb = "0.7.0"  # Main InfluxDB client
futures = "0.3" 
influxdb2 = "0.5.2"
influxdb2-structmap = "0.2.0"
cucumber = "0.21.1"
rand = "0.8.5"
parking_lot = "0.12.1"
sha2 = "0.10.6"


[[bin]]
name = "pattern_detector"  # This should match your main binary name
path = "src/main.rs"
