[package]
name = "pattern_detector"
version = "0.1.0"
edition = "2021"
default-run = "pattern_detector"  # Add this line

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
csv = "1.1"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
log4rs = "1.2.0"  
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
influxdb = "0.7.0"  # Main InfluxDB client
futures = "0.3" 
influxdb2 = "0.5.2"
influxdb2-structmap = "0.2.0"
cucumber = "0.21.1"
rand = "0.8.5"
parking_lot = "0.12.1"
sha2 = "0.10.6"
thiserror = "1.0" # For error handling
lazy_static = "1.4.0" # Or latest
tokio-tungstenite = { version = "0.21", features = ["native-tls"] } # Or "rustls-tls-native-roots" or "rustls-tls-webpki-roots"
futures-util = { version = "0.3", features = ["sink"] }
url = "2"
uuid = { version = "1.6", features = ["v4"] }
dashmap = "5.5"
ctrlc = "3.4"
crossterm = "0.27"
ratatui = "0.24"
clap = { version = "4.0", features = ["derive"] }
axum = "0.7"
tracing = "0.1"
dotenvy = "0.15"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
redis = { version = "0.24", features = ["tokio-comp"] }


[[bin]]
name = "pattern_detector"  # This should match your main binary name
path = "src/main.rs"

[[bin]]
name = "dashboard_proxy"
path = "src/bin/dashboard_proxy.rs"

[[bin]]
name = "redis_test"
path = "src/bin/redis_test.rs"